Added websocket to send notif if document status change and improved unit tests