@@ -1,5 +1,6 @@
 package com.docshifter.assessment.docconverter.service;
 
+import com.docshifter.assessment.docconverter.dto.StatusChangeNotification;
 import com.docshifter.assessment.docconverter.model.Document;
 import com.docshifter.assessment.docconverter.model.DocumentStatus;
 import com.docshifter.assessment.docconverter.repository.DocumentRepository;
@@ -9,6 +10,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -32,6 +34,8 @@ class DocumentServiceTest {
 
     @Mock
     private MultipartFile multipartFile;
+    @Mock
+    private SimpMessagingTemplate template;
 
     @InjectMocks
     private DocumentService documentService;
@@ -42,7 +46,6 @@ class DocumentServiceTest {
     void setUp() throws IOException {
         Files.createDirectories(uploadDir);
     }
-
 
     @Test
     void testUploadDocument() throws IOException {
@@ -68,6 +71,13 @@ class DocumentServiceTest {
     }
 
     @Test
+    void testUploadDocumentWithNullFile() {
+        assertThrows(NullPointerException.class, () -> {
+            documentService.uploadDocument(null);
+        });
+    }
+
+    @Test
     void testGetAllUploadedFileNames() throws IOException {
         Document document = new Document();
         document.setOriginalName("testFile.txt");
@@ -78,12 +88,20 @@ class DocumentServiceTest {
 
         assertNotNull(fileNames);
         assertEquals(1, fileNames.size());
-        assertEquals("testFile.txt", fileNames.getFirst());
+        assertEquals("testFile.txt", fileNames.get(0));
         verify(documentRepository, times(1)).findAll();
-        Path filePath = uploadDir.resolve("testFile.txt");
-        Files.deleteIfExists(filePath);
     }
 
+    @Test
+    void testGetAllUploadedFileNamesEmpty() {
+        when(documentRepository.findAll()).thenReturn(Collections.emptyList());
+
+        List<String> fileNames = documentService.getAllUploadedFileNames();
+
+        assertNotNull(fileNames);
+        assertTrue(fileNames.isEmpty());
+        verify(documentRepository, times(1)).findAll();
+    }
 
     @Test
     void testDeleteFileNotFound() throws IOException {
@@ -110,7 +128,6 @@ class DocumentServiceTest {
         verify(documentRepository, times(1)).findAll();
         verify(documentRepository, times(1)).deleteAll();
         Files.deleteIfExists(filePath);
-
     }
 
     @Test
@@ -139,5 +156,102 @@ class DocumentServiceTest {
 
         assertEquals("Document with id1 not found", exception.getMessage());
         verify(documentRepository, times(1)).findById(documentId);
+    }
+
+    @Test
+    void testCreateRequestedDocument() {
+        Document originalDocument = new Document();
+        originalDocument.setId(1L);
+        originalDocument.setOriginalName("testFile.txt");
+
+        when(documentRepository.findById(1L)).thenReturn(Optional.of(originalDocument));
+        when(documentRepository.save(any(Document.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        String conversionId = documentService.createRequestedDocument(1L);
+
+        assertNotNull(conversionId);
+        assertNotEquals("", conversionId);
+        verify(documentRepository, times(1)).findById(1L);
+        verify(documentRepository, times(1)).save(any(Document.class));
+    }
+
+    @Test
+    void testUpdateDocumentStatus() {
+        Document document = new Document();
+        document.setConversionId("1234");
+        document.setStatus(DocumentStatus.REQUESTED);
+
+        when(documentRepository.findByConversionId("1234")).thenReturn(Optional.of(document));
+        when(documentRepository.save(any(Document.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        documentService.updateDocumentStatus("1234", DocumentStatus.COMPLETED);
+
+        assertEquals(DocumentStatus.COMPLETED, document.getStatus());
+        verify(documentRepository, times(1)).findByConversionId("1234");
+        verify(documentRepository, times(1)).save(document);
+        verify(template, times(1)).convertAndSend(eq("/topic/notification"), any(StatusChangeNotification.class));
+
+    }
+
+    @Test
+    void testUpdateDocumentStatusWithConvertedFilePath() {
+        Document document = new Document();
+        document.setConversionId("1234");
+        document.setStatus(DocumentStatus.REQUESTED);
+
+        when(documentRepository.findByConversionId("1234")).thenReturn(Optional.of(document));
+        when(documentRepository.save(any(Document.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        documentService.updateDocumentStatus("1234", DocumentStatus.COMPLETED, "convertedFile.txt", LocalDateTime.now(), "converted/convertedFile.txt");
+
+        assertEquals(DocumentStatus.COMPLETED, document.getStatus());
+        assertEquals("convertedFile.txt", document.getConvertedName());
+        assertNotNull(document.getConvertedAt());
+        assertEquals("converted/convertedFile.txt", document.getConvertedFilePath());
+        verify(documentRepository, times(1)).findByConversionId("1234");
+        verify(documentRepository, times(1)).save(document);
+    }
+
+    @Test
+    void testGetConversionStatus() {
+        Document document = new Document();
+        document.setConversionId("1234");
+        document.setStatus(DocumentStatus.REQUESTED);
+
+        when(documentRepository.findByConversionId("1234")).thenReturn(Optional.of(document));
+
+        DocumentStatus status = documentService.getConversionStatus("1234");
+
+        assertEquals(DocumentStatus.REQUESTED, status);
+        verify(documentRepository, times(1)).findByConversionId("1234");
+    }
+
+    @Test
+    void testGetDocumentWithConversionIDCompleted() {
+        Document document = new Document();
+        document.setConversionId("1234");
+        document.setStatus(DocumentStatus.COMPLETED);
+
+        when(documentRepository.findByConversionId("1234")).thenReturn(Optional.of(document));
+
+        Optional<Document> foundDocument = documentService.getDocumentWithConversionID("1234");
+
+        assertTrue(foundDocument.isPresent());
+        assertEquals(document, foundDocument.get());
+        verify(documentRepository, times(1)).findByConversionId("1234");
+    }
+
+    @Test
+    void testGetDocumentWithConversionIDNotCompleted() {
+        Document document = new Document();
+        document.setConversionId("1234");
+        document.setStatus(DocumentStatus.REQUESTED);
+
+        when(documentRepository.findByConversionId("1234")).thenReturn(Optional.of(document));
+
+        Optional<Document> foundDocument = documentService.getDocumentWithConversionID("1234");
+
+        assertFalse(foundDocument.isPresent());
+        verify(documentRepository, times(1)).findByConversionId("1234");
     }
 }
